# kingbuilds-mcp-server

./: .coverage  .gitignore  README.md  claude-mcp-server-prd.md  pyproject.toml
deploy/: Dockerfile  docker-compose.yml
deploy/systemd/: claude-mcp-server.service
examples/: claude_desktop_config.json  quickstart.py
src/claude_mcp_server.egg-info/: SOURCES.txt  requires.txt
src/mcp_server/: __init__.py  __main__.py  app.py  config.py  http_main.py  net.py  security.py  stdio_main.py
src/mcp_server/tools/: __init__.py  files.py  http_request.py  transform.py  web.py
tests/: test_mcp_server.py
